--- a/src/components/pos/pos.component.html
+++ b/src/components/pos/pos.component.html
@@ -102,8 +102,9 @@
         </app-order-panel>
       </div>
 
-      <!-- Desktop: Side panel -->
-      <div class="hidden md:block w-full md:w-1/2 lg:w-2/5 xl:w-1/3 border-l-2 border-gray-700">
+      <!-- Desktop: Side panel (Increased Width) -->
+      <!-- Changed from w-1/3 to w-[600px] or 50% to give more room -->
+      <div class="hidden md:block w-full md:w-3/5 lg:w-1/2 xl:w-[600px] border-l-2 border-gray-700 shadow-2xl relative z-20">
         <app-order-panel
           [selectedTable]="selectedTable()"
           [currentOrder]="activeOrder()"
